<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:background="@color/persoWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/persoWhite"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <fragment
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                class="com.google.android.gms.maps.MapFragment" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/relative1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/textDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/textSpeed"
                android:layout_marginLeft="20dp"
                android:text="@string/duration_label"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/persoGrey" />

            <TextView
                android:id="@+id/textSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:textSize="20dp"
                android:text="@string/speed_label"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/persoGrey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Chronometer
                android:id="@+id/chronometer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="Chronometer"
                android:textSize="28dp" />

            <TextView
                android:id="@+id/textVitesse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:text="0"
                android:textSize="28dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/textDistance11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="20dp"
                android:text="@string/distance_label"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/persoGrey" />

            <TextView
                android:id="@+id/textCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:textSize="20dp"
                android:text="@string/colories_label"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/persoGrey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="0"
                android:textSize="28dp" />

            <TextView
                android:id="@+id/valueCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:text="0"
                android:textSize="28dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <ImageButton
                android:id="@+id/btnStartSeance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:background="@color/persoWhite"
                android:src="@drawable/ic_start_jogging" />

            <ImageButton
                android:id="@+id/btnArretSeance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:background="@color/persoWhite"
                android:src="@drawable/ic_stop_jogging" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>